cr: show internal flag if either of permisions are internal

--- a/client/one/partials/account_account.html
+++ b/client/one/partials/account_account.html
@@ -97,7 +97,7 @@
     <div class="form-horizontal table-access-permissions" ng-if="hasPermission('zemauth.can_manage_agency') && hasPermission('zemauth.account_agency_access_permissions')">
         <div class="form-group">
             <label for="first-name-input" class="col-xs-2 control-label">
-                <zem-internal-feature ng-if="isPermissionInternal('zemauth.account_agency_access_permissions')" popover-placement="bottom"></zem-internal-feature>
+                <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_manage_agency') || isPermissionInternal('zemauth.account_agency_access_permissions')" popover-placement="bottom"></zem-internal-feature>
                 Access Permissions
                 <zem-help-popover content="Users who have access to the account you're currently on." placement="top"></zem-help-popover>
             </label>
