Changed typekit script

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -4,15 +4,8 @@
         {% load staticfiles %}
         <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" />
         <!-- TypeKit async code -->
-        <script type="text/javascript">
-            (function(d) {
-                var config = {
-                    kitId: 'lfx0xpc',
-                    scriptTimeout: 3000
-                },
-                    h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-            })(document);
-        </script>
+        <script src="//use.typekit.net/lfx0xpc.js"></script>
+        <script>try{Typekit.load({async: true});}catch(e){}</script>
         {% if not debug %}
         <script>
             var _prum = [['id', '5448f1e2abe53db246b9639a'],
