removed most of settings from agency tab and renamed it to history tab

--- a/client/one/partials/account_account.html
+++ b/client/one/partials/account_account.html
@@ -105,6 +105,7 @@
 
         <button type="button" class="btn btn-primary" ng-click="saveSettings()">Save</button>
         <button type="button" class="btn btn-default" ng-click="getSettings(true)">Discard</button>
+        <button type="button" class="btn btn-default pull-right" ng-class="{'disabled': !canArchive}" title="{{ (!canArchive && 'All of the account\'s campaigns have to be paused in order to archive the account.') || '' }}" ng-click="archiveAccount()">Archive account</button>
         <div class="loader" ng-show="requestInProgress"></div>
         <span ng-show="saved" class="success feedback-text">Your updates have been saved.</span>
         <span ng-show="saved === false" class="error feedback-text">An error occurred while saving. Please correct the marked fields and save again.</span>
