also moved restore button

--- a/client/one/partials/account_account.html
+++ b/client/one/partials/account_account.html
@@ -174,3 +174,10 @@
         zem-has-permission="hasPermission"
         zem-is-permission-internal="isPermissionInternal" />
 </div>
+
+<div class="page page-account-agency" ng-if="!!account.archived">
+    <p>
+        <strong>This account is archived.</strong>
+    </p>
+    <button type="button" class="btn btn-default" ng-click="restoreAccount()">Restore account</button>
+</div>
