Remove :: one-time-bindings

--- a/client/one/components/zem-grid/templates/zem_grid_cell.html
+++ b/client/one/components/zem-grid/templates/zem_grid_cell.html
@@ -4,6 +4,6 @@
             {{ctrl.row.collapsed ? "[ + ]" : "[ - ]"}}
         </a>
     </span>
-    <span>{{::ctrl.cell}}</span>
+    <span>{{ctrl.cell}}</span>
 </div>
 
