--- a/client/one/components/zem-grid/templates/zem_grid_header.html
+++ b/client/one/components/zem-grid/templates/zem_grid_header.html
@@ -3,7 +3,7 @@
         <div class="zem-grid-cell"
              ng-repeat="col in ctrl.grid.header.columns track by $index"
              ng-style="ctrl.getCellStyle($index)">
-            <span class="col-title">{{ ::col }}</span>
+            <span class="col-title">{{ col }}</span>
         </div>
     </div>
 </div>
