--- a/client/one/partials/account_account.html
+++ b/client/one/partials/account_account.html
@@ -105,7 +105,12 @@
 
         <button type="button" class="btn btn-primary" ng-click="saveSettings()">Save</button>
         <button type="button" class="btn btn-default" ng-click="getSettings(true)">Discard</button>
-        <button ng-if="hasPermission('zemauth.archive_restore_entity')" type="button" class="btn btn-default pull-right" ng-class="{'disabled': !canArchive}" title="{{ (!canArchive && 'All of the account\'s campaigns have to be paused in order to archive the account.') || '' }}" ng-click="archiveAccount()">Archive account</button>
+        <div class="settings-archive-container" ng-if="hasPermission('zemauth.archive_restore_entity')">
+            <zem-internal-feature ng-if="isPermissionInternal('zemauth.archive_restore_entity')" popover-placement="bottom"></zem-internal-feature>
+            <button type="button" class="btn btn-default pull-right" ng-class="{'disabled': !canArchive}" title="{{ (!canArchive && 'All of the account\'s campaigns have to be paused in order to archive the account.') || '' }}" ng-click="archiveAccount()">
+                Archive account
+            </button>
+        </div>
         <div class="loader" ng-show="requestInProgress"></div>
         <span ng-show="saved" class="success feedback-text">Your updates have been saved.</span>
         <span ng-show="saved === false" class="error feedback-text">An error occurred while saving. Please correct the marked fields and save again.</span>
@@ -179,5 +184,9 @@
     <p>
         <strong>This account is archived.</strong>
     </p>
-    <button ng-if="hasPermission('zemauth.archive_restore_entity')" type="button" class="btn btn-default" ng-click="restoreAccount()">Restore account</button>
+
+    <div class="settings-restore-container" ng-if="hasPermission('zemauth.archive_restore_entity')">
+        <zem-internal-feature ng-if="isPermissionInternal('zemauth.archive_restore_entity')" popover-placement="bottom"></zem-internal-feature>
+        <button ng-if="hasPermission('zemauth.archive_restore_entity')" type="button" class="btn btn-default" ng-click="restoreAccount()">Restore account</button>
+    </div>
 </div>
